# scylladb

./: .gitmodules  CMakeLists.txt  README.md  bytes.cc  clocks-impl.cc  compound_compat.hh  configure.py  debug.cc  generic_server.cc  init.cc  init.hh  install-dependencies.sh  install.sh  interval.hh  main.cc  multishard_mutation_query.cc  partition_snapshot_row_cursor.hh  querier.cc  query-request.hh  reader_concurrency_semaphore.cc  row_cache.cc  row_cache.hh  schema_mutations.cc  seastarx.hh  sstables_loader.cc  sstables_loader.hh  table_helper.cc  test.cc  test.hh  test.py  unimplemented.cc
.github/: clang-include-cleaner.json  clang-tidy-matcher.json
alternator/: auth.cc  conditions.cc  executor.cc  expressions.cc  serialization.cc  server.cc  server.hh
api/: api.hh  storage_service.cc  tasks.cc
auth/: authentication_options.hh  certificate_authenticator.cc  default_authorizer.cc  maintenance_socket_role_manager.cc  password_authenticator.cc  resource.cc  resource.hh  role_manager.hh  roles-metadata.cc  service.cc  standard_role_manager.cc
cdc/: generation.cc  generation.hh  log.cc  metadata.cc
cmake/: limit_jobs.cmake  mode.common.cmake
compaction/: compaction.cc  compaction_descriptor.hh  compaction_manager.cc  compaction_strategy.cc  incremental_compaction_strategy.cc  table_state.hh  time_window_compaction_strategy.cc
docs/: Makefile  pyproject.toml
docs/_ext/: utils.py
docs/dev/: reader-concurrency-semaphore.md
docs/operating-scylla/nodetool-commands/: restore.rst
docs/operating-scylla/procedures/tips/: best-practices-scylla-on-docker.rst
(+1087 files in other folders)
