[tool.poetry]
name = "scylla"
description = "Scylla Documentation"
version = "4.3.0"
authors = ["ScyllaDB Contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "6.0.1"
pygments = "2.15.1"
redirects_cli ="~0.1.2"
sphinx-scylladb-theme = "^1.7.1"
sphinx-sitemap = "2.5.1"
sphinx-autobuild = "2021.3.14"
Sphinx = "7.2.6"
sphinxcontrib-datatemplates = "^0.9.2"
sphinx-scylladb-markdown = "^0.1.2"
sphinx_collapse ="^0.1.3"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
